--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Array methods</title>
-  <link rel="shortcut icon" href="/public/images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/public/images/favicon-16x16.png" type="image/x-icon">
 </head>
 
 <body>
