--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Array methods</title>
   <link rel="shortcut icon" href="/images/favicon-16x16.png" type="image/x-icon">
+  <script src="/js/index.js" type="module"></script>
 </head>
 
 <body>
